--- a/.github/workflows/sims_fit_and_eval.yml
+++ b/.github/workflows/sims_fit_and_eval.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       dates:     { description: "YYYYMMDD[,YYYYMMDD...]", required: true,  type: string }
-      pids:      { description: "場ID (例: 02) or ALL",   required: true,  type: string, default: "ALL" }
+      pids:      { description: "場ID or ALL",            required: true,  type: string, default: "ALL" }
       sims:      { description: "trials per race",        required: true,  type: string, default: "3000" }
       iters:     { description: "fit iters",              required: true,  type: string, default: "60" }
       eval_topn: { description: "eval topN",              required: true,  type: string, default: "18" }
@@ -28,48 +28,32 @@ jobs:
           pip install numpy pandas
 
       - name: Fit params to results
-        env:
-          DATES: ${{ inputs.dates }}
-          PIDS:  ${{ inputs.pids }}
-          SIMS:  ${{ inputs.sims }}
-          ITERS: ${{ inputs.iters }}
         run: |
           set -e
-          # PIDS=ALL のときは引数を渡さない
-          PIDS_OPT=""
-          if [ -n "${PIDS}" ] && [ "${PIDS}" != "ALL" ]; then
-            PIDS_OPT="--pids ${PIDS}"
-          fi
-
           PYTHONPATH="scripts/sims" python scripts/sims/sims_fit.py \
-            --dates "${DATES}" \
-            ${PIDS_OPT} \
-            --sims  "${SIMS}" \
-            --iters "${ITERS}"
+            --dates "${{ inputs.dates }}" \
+            --pids  "${{ inputs.pids }}" \
+            --sims  "${{ inputs.sims }}" \
+            --iters "${{ inputs.iters }}"
+
+      # ★ ここを追加：fitted_params.json を active_params.json にコピー
+      - name: Copy fitted → active
+        run: |
+          set -e
+          mkdir -p scripts/sims/pass1/fit
+          cp scripts/sims/pass1/fit/fitted_params.json scripts/sims/pass1/fit/active_params.json
+          echo "active_params.json prepared."
 
       - name: Eval with fitted params (sims_pure)
-        env:
-          DATES: ${{ inputs.dates }}
-          PIDS:  ${{ inputs.pids }}
-          SIMS:  ${{ inputs.sims }}
-          TOPN:  ${{ inputs.eval_topn }}
         run: |
           set -e
-          PIDS_OPT=""
-          if [ -n "${PIDS}" ] && [ "${PIDS}" != "ALL" ]; then
-            PIDS_OPT="--pids ${PIDS}"
-          fi
-
-          # ★ fit が出力したファイル名に合わせる（fitted_params.json）
-          PARAMS_PATH="scripts/sims/pass1/fit/fitted_params.json"
-
           PYTHONPATH="scripts/sims" python scripts/sims/sims_pure.py \
-            --dates "${DATES}" \
-            ${PIDS_OPT} \
-            --sims  "${SIMS}" \
-            --topn  "${TOPN}" \
+            --dates "${{ inputs.dates }}" \
+            --pids  "${{ inputs.pids }}" \
+            --sims  "${{ inputs.sims }}" \
+            --topn  "${{ inputs.eval_topn }}" \
             --outdir "SimS_pure_fitted" \
-            --params "${PARAMS_PATH}"
+            --params scripts/sims/pass1/fit/active_params.json
 
       - name: Commit outputs
         if: always()
